Class creation warning fixed